--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"axios": "^0.26.0",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
-		"express-async-handler": "^1.2.0"
+		"express-async-handler": "^1.2.0",
+		"react-router-dom": "^6.2.1"
 	},
 	"engines": {
 		"node": "v17.4.0"
