--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"client": "npm start --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "cd client && npm install && npm run build"
+		"build": "cd client && npm install && npm run build",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [],
 	"author": "",
