--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"start": "node server/index.js",
-		"server": "nodemon server/index.js",
+		"start": "node server/index",
+		"server": "nodemon server/index",
 		"client": "npm start --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
