--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"start": "node server/index.js",
-		"server": "nodemon server/index.js",
+		"start": "node server/index",
+		"server": "nodemon server/index",
 		"client": "npm start --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "cd client && npm install && npm run build"
+		"build": "cd client && npm install && npm run build",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [],
 	"author": "",
